# MR60BHXX-driver

./: .gitignore  CHANGELOG.md  INSTALL.md  PLATFORM_COMPATIBILITY.md  QUICKSTART.md  README.md  SENSOR_DIAGNOSIS.md  pyproject.toml  requirements.txt  setup.py  test_breath_rate_frames.py  test_breath_rate_parsing.py  test_byte_order.py  test_installation.py  test_raw_bytes.py
.github/workflows/: python-publish.yml
examples/: basic_usage.py  context_manager_example.py  continuous_monitoring.py  debug_raw_data.py  port_detector.py  real_time_display.py
seeed_mr60bha2/: __init__.py  exceptions.py  mmwave_base.py  mr60bha2.py
