[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MR60BHXX-driver"
version = "1.0.0"
description = "Python library for Seeed MR60BHA2 mmWave heart rate and breath monitoring sensor"
readme = "README.md"
authors = [
    {name = "AB-Engineering"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["seeed", "mmwave", "sensor", "heart-rate", "breath-rate", "raspberry-pi", "iot"]
requires-python = ">=3.7"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
]

[project.urls]
Homepage = "https://github.com/AB-Engineering/MR60BHXX-driver"
Documentation = "https://github.com/AB-Engineering/MR60BHXX-driver"
Repository = "https://github.com/AB-Engineering/MR60BHXX-driver"
Issues = "https://github.com/AB-Engineering/MR60BHXX-driver/issues"

[tool.setuptools]
packages = ["seeed_mr60bha2"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
``` ````

setup.py (ensure name matches MR60BHXX-driver)
```python name=setup.py url=https://github.com/AB-Engineering/MR60BHXX-driver/blob/main/setup.py
"""
Setup script for the MR60BHXX-driver Python package.

Author: AB-Engineering
Date: 2025-11-22
"""

from setuptools import setup, find_packages
from pathlib import Path

# Read the README file
readme_file = Path(__file__).parent / "README.md"
long_description = readme_file.read_text(encoding='utf-8') if readme_file.exists() else ""

setup(
    name='MR60BHXX-driver',
    version='1.0.0',
    author='AB-Engineering',
    description='Python library for Seeed MR60BHA2 mmWave heart rate and breath monitoring sensor',
    long_description=long_description,
    long_description_content_type='text/markdown',
    url='https://github.com/AB-Engineering/MR60BHXX-driver',
    packages=find_packages(),
    classifiers=[
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: System :: Hardware :: Hardware Drivers',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Operating System :: POSIX :: Linux',
    ],
    python_requires='>=3.7',
    install_requires=[
        'pyserial>=3.5',
    ],
    extras_require={
        'dev': [
            'pytest>=6.0',
            'pytest-cov>=2.0',
            'black>=21.0',
            'flake8>=3.9',
            'mypy>=0.9',
        ],
    },
    keywords='seeed mmwave sensor heart-rate breath-rate raspberry-pi iot',
    project_urls={
        'Documentation': 'https://github.com/AB-Engineering/MR60BHXX-driver',
        'Source': 'https://github.com/AB-Engineering/MR60BHXX-driver',
        'Tracker': 'https://github.com/AB-Engineering/MR60BHXX-driver/issues',
    },
)
```


.github/workflows/python-publish.yml (use twine + PYPI_API_TOKEN — recommended workflow change)
````yaml name=.github/workflows/python-publish.yml url=https://github.com/AB-Engineering/MR60BHXX-driver/blob/main/.github/workflows/python-publish.yml
# This workflow will upload a Python Package to PyPI when a release is created

name: Upload Python Package

on:
  release:
    types: [published]

permissions:
  contents: read

jobs:
  release-build:
    runs-on: ubuntu-latest

    steps:
      - uses: actions/checkout@v4

      - uses: actions/setup-python@v5
        with:
          python-version: "3.x"

      - name: Build release distributions
        run: |
          python -m pip install --upgrade build
          python -m build

      - name: Upload distributions
        uses: actions/upload-artifact@v4
        with:
          name: release-dists
          path: dist/

  pypi-publish:
    runs-on: ubuntu-latest
    needs:
      - release-build
    permissions:
      contents: read

    environment:
      name: pypi
      url: https://pypi.org/project/MR60BHXX-driver/

    steps:
      - name: Retrieve release distributions
        uses: actions/download-artifact@v4
        with:
          name: release-dists
          path: dist/

      - name: Publish release distributions to PyPI
        env:
          TWINE_USERNAME: __token__
          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
        run: |
          python -m pip install --upgrade pip twine
          python -m twine check dist/*
          python -m twine upload dist/*
